using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis 
{
    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string VERTICAL_AXIS = "Vertical";
}
public class Keys
{
    public const KeyCode JUMP = KeyCode.Space; 
    public const KeyCode DASH = KeyCode.Q;
}
public class AnimtaionTags{
    public const string SPEED = "Speed";
    public const string RUNNINGJUMP_TRIGGER = "RunningJump";
    public const string STARTFOCUSINGJUMP_TRIGGER = "StartFocusingJump";
    public const string ENDFOCUSINGJUMP_TRIGGER = "EndFocusingJump";
    public const string JUMPRISING_TRIGGER = "JumpRising";
    public const string JUMPFALLING_TRIGGER = "JumpFalling";
    public const string LANDING_TRIGGER = "LANDING";
}
